--- a/JiuJiuWeb/package.json
+++ b/JiuJiuWeb/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
     "jquery": "^3.2.1",
+    "ng2-smart-table": "^1.2.2",
     "rxjs": "^5.5.2",
     "underscore": "^1.8.3",
     "zone.js": "^0.8.14"
